# D-type

./: .gitignore  .gitmodules  CMakeLists.txt  D-type.vcxproj  D-type.vcxproj.filters  README.md  make.bat  windowsGEN.bat
D-type/: CMakeLists.txt  EntryPoint.cpp  core.cpp
D-type/Core/: Application.cpp  Application.h
